--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,10 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 /*-----------------------------------------
     Header
  ----------------------------------------*/
@@ -47,8 +51,9 @@ ul li {
     display: inline;
 }
 
-a {
-    text-decoration: none;
+li a {
+    font-size: 16px;
+    color: white;
 }
 
 #projects-header {
