--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,62 @@ header {
     height: 100%;
 }
 
+/* HIDDEN NAV */
+
+#menu-tag {
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /*background-color: rgba(132, 128, 136, 1);*/
+    background-color: rgba(77, 77, 77, 1);
+}
+
+#mobile-nav {
+    position: relative;
+    z-index: 1;
+    display: none;
+}
+
+#mobile-nav ul {
+    display: block;
+    width: 100%;
+}
+
+.mob-navi {
+    display: block;
+    border-bottom: 1px solid #38383a;
+    /*background-color: rgba(77, 77, 77, 1);*/
+    background-color: rgba(132, 128, 136, 1);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    font-size: 18px;
+    color: white;
+    transition: background-color 0.25s;
+}
+
+.mob-navi:hover {
+    /*background-color: rgba(132, 128, 136, 1);*/
+    background-color: rgba(77, 77, 77, 1);
+}
+
+.fa-bars {
+    color: white;
+    text-align: center;
+    display: none;
+    font-size: 30px;
+}
+
+#menu-tag {
+    display: none;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    width: 200px;
+    margin: 0 auto;
+}
+
 /* NAV */
 
 ul {
@@ -98,6 +154,7 @@ li a:hover {
 #main-heading {
     width: 60%;
     position: absolute;
+    /*margin: 150px auto;*/
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -182,7 +239,21 @@ h3 {
  ----------------------------------------*/
 
 @media (max-width: 900px) {
-    nav {
+
+    h1 {
+        font-size: 35px;
+    }
+
+    .fa-bars {
+        display: block;
+    }
+
+    #menu-tag {
+        display: block;
+    }
+
+    #nav {
         display: none;
     }
+
 }
