--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 }
 
 /*-----------------------------------------
-    Resets
+    Resets / Constants
  ----------------------------------------*/
 
 * {
@@ -36,13 +36,17 @@
     padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, a, p, li {
-    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+body {
+    background-color: #efefef;
 }
 
 a {
     color: white;
     text-decoration: none;
+}
+
+.shadow-bottom {
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
 }
 
 /*-----------------------------------------
@@ -143,6 +147,7 @@ li a {
     margin-right: 30px;
     margin-left: 30px;
     transition: color 0.25s;
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
 }
 
 li a:hover {
@@ -162,11 +167,13 @@ li a:hover {
     text-align: center;
 }
 
-/*#main-heading h1 {*/
-    /*margin-bottom: 50px;*/
-/*}*/
+#main-heading h1 {
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
+    margin-bottom: 50px;
+}
 
 #main-heading h3 {
+    text-shadow: 0 0.05rem 0.1rem rgba(0, 0, 0, 0.5);
     margin-bottom: 30px;
 }
 
@@ -209,24 +216,102 @@ h3 {
 }
 
 #start-button span {
+    text-shadow: none;
     color: white;
     margin: 0 auto;
-    font-size: 20px;
+    font-size: 30px;
 }
-
-
 
 /*-----------------------------------------
     Container
  ----------------------------------------*/
 
-#projects-header {
-    height: 400px;
+/* INTRO */
+
+#intro {
+    background-color: white;
+    margin-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+#intro h3 {
+    text-align: left;
+    margin-bottom: 20px;
+    color: black;
+    font-size: 30px;
+}
+
+#image {
+    margin-right: 50px;
+    /*width: 50%;*/
+}
+
+#profile-img {
+    display: block;
+    border-radius: 100%;
+    height: 200px;
+    margin: 0 auto;
+}
+
+#intro-description {
+    /*margin-left: 50px;*/
+    font-size: 18px;
+    width: 50%;
+}
+
+/* PROJECTS HEADING */
+
+#projects-heading {
+    background-color: white;
+    margin-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+#projects-heading h3 {
+    color: black;
+}
+
+#projects-heading h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 45px;
+}
+
+.project-img {
+    width: 100%;
+    height: 50%;
+}
+
+.project-card {
+    height: 50%;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+/* CAROUSEL */
+
 #carousel {
-    background-color: red;
-    height: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+#carousel > div {
+    background-color: white;
+    height: 500px;
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 50px;
+    width: 400px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12);
 }
 
 #content {
@@ -235,10 +320,61 @@ h3 {
 }
 
 /*-----------------------------------------
+    Footer
+ ----------------------------------------*/
+
+footer {
+    background-color: #2b252c;
+}
+
+footer span {
+    display: block;
+    text-align: center;
+    color: white;
+}
+
+footer > div {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#up-button {
+    border-radius: 100%;
+    background-color: #00aff6;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    /*background-color: #006994;*/
+    height: 100px;
+    width: 100px;
+    margin: 0 auto 20px auto;
+    transition: background-color 0.5s;
+}
+
+#up-button:hover {
+    background-color: #1abeff;
+}
+
+#up-button span {
+    text-shadow: none;
+    color: white;
+    margin: 0 auto;
+    font-size: 30px;
+}
+
+footer ul {
+    margin-bottom: 20px;
+}
+
+footer a {
+    font-size: 40px;
+}
+
+/*-----------------------------------------
     Mobile Optimization
  ----------------------------------------*/
 
-@media (max-width: 900px) {
+@media only screen and (max-width: 900px) {
 
     h1 {
         font-size: 35px;
@@ -256,4 +392,30 @@ h3 {
         display: none;
     }
 
+    #intro {
+        display: block;
+    }
+
+    #image {
+        margin: 0;
+    }
+
+    #intro-description {
+        text-align: center;
+        margin: 10px auto;
+        width: 80%;
+    }
+
+    #intro-description h3 {
+        text-align: center;
+    }
+
+    #carousel > div {
+        margin: 0 0 50px 0;
+        width: 80%;
+    }
+
+    footer a {
+        font-size: 35px;
+    }
 }
