--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,24 @@ body {
     background-color: #efefef;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    text-align: center;
+    color: white;
+}
+
+h1 {
+    font-size: 70px;
+}
+
+h2 {
+    font-size: 45px;
+    color: black;
+}
+
+h3 {
+    font-size: 20px;
+}
+
 a {
     color: white;
     text-decoration: none;
@@ -47,6 +65,10 @@ a {
 
 .shadow-bottom {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.3);
+}
+
+.item-shadow {
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12);
 }
 
 /*-----------------------------------------
@@ -185,19 +207,6 @@ hr {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
-h1, h3 {
-    text-align: center;
-    color: white;
-}
-
-h1 {
-    font-size: 70px;
-}
-
-h3 {
-    font-size: 20px;
-}
-
 #start-button {
     border-radius: 100%;
     background-color: #00aff6;
@@ -263,6 +272,77 @@ h3 {
     width: 50%;
 }
 
+/* SKILLS HEADING */
+
+#skills-heading {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: white;
+    margin-bottom: 50px;
+}
+
+#skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.skill {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 300px;
+    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2), 0 1px 1px 0 rgba(0,0,0,0.14), 0 2px 1px -1px rgba(0,0,0,0.12);
+}
+
+.skill-left {
+    height: 75px;
+    width: 25%;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.skill-right {
+    /*height: 75px;*/
+    padding-top: 16px;
+    padding-bottom: 17px;
+    width: 75%;
+    margin-right: 20px;
+}
+
+.skill-img {
+    width: 75px;
+    height: 75px;
+}
+
+.skill-title {
+    text-align: left;
+}
+
+.progress-bar {
+    height: 20px;
+    width: 100%;
+    margin-bottom: 10px;
+    background-color: #ddd;
+}
+
+.progress {
+    height: inherit;
+    width: 50%;
+    background-color: #4caf50;
+    text-align: center;
+    line-height: 20px;
+    color: white;
+}
+
 /* PROJECTS HEADING */
 
 #projects-heading {
@@ -272,14 +352,18 @@ h3 {
     padding-bottom: 100px;
 }
 
+#projects-heading > div {
+    margin: 0 auto;
+    width: 80%;
+}
+
 #projects-heading h3 {
     color: black;
 }
 
 #projects-heading h2 {
     margin-bottom: 20px;
-    text-align: center;
-    font-size: 45px;
+
 }
 
 .project-img {
@@ -412,6 +496,11 @@ footer a {
 
     #carousel > div {
         margin: 0 0 50px 0;
+        width: 80%;
+    }
+
+    .skill {
+        margin: 0 auto 50px auto;
         width: 80%;
     }
 
