--- a/css/about.css
+++ b/css/about.css
@@ -31,6 +31,11 @@ header {
     margin-bottom: 50px;
 }
 
+.section-header {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
 .image-section {
     overflow: hidden;
     width: 40%;
@@ -45,6 +50,10 @@ header {
 }
 
 .content-section {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 50px;
     background-color: white;
     width: 60%;
 }
@@ -52,21 +61,4 @@ header {
 .section-img {
     width: 100%;
     height: 100%;
-}
-
-.left
-
-
-/*-----------------------------------------
-    Mobile Optimization
- ----------------------------------------*/
-
-@media only screen and (max-width: 900px) {
-    #about-heading h1 {
-        font-size: 30px;
-        position: absolute;
-        top: 11%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
 }
